# allwave

./: Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: sparsification.md
src/: alignment.rs  iterator.rs  knn_graph.rs  lib.rs  main.rs  mash.rs  neighbor_joining.rs  test_framework.rs  types.rs  validation.rs  validation_correct.rs  validation_simple.rs  wfa.rs
tests/: integration_tests.rs
tests/debug/: README.md  check_wfa_ops.rs  debug_align.rs  debug_cigar.rs  debug_problem.rs  debug_wfa.rs  test_allwave.rs  test_cigar_interpretation.rs  test_wfa_order.rs  verify_memory_mode.rs
