[package]
name = "allwave"
version = "0.1.0"
edition = "2021"
authors = ["AllWave Contributors"]
description = "High-performance pairwise sequence aligner using bidirectional wavefront alignment"
license = "MIT"
repository = "https://github.com/yourusername/allwave"
readme = "README.md"
keywords = ["bioinformatics", "alignment", "wavefront", "genomics"]
categories = ["science", "command-line-utilities"]

[dependencies]
bio = "1.4"
clap = { version = "4.4", features = ["derive"] }
flate2 = "1.0"
lib_wfa2 = { git = "https://github.com/ekg/lib_wfa2", rev = "819b82cd842aabedcb962fd5b82380fe454234f6" }
rand = "0.8"
rayon = "1.8"
